k8s/dz5/manifests/frontended.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontended
  labels:
    app: my-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-service
  template:
    metadata:
      labels:
        app: my-service
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
