k8s/dz5/manifests/front_back_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-backend
spec:
  selector:
    app: my-service
  ports:  
  - port: 9001
    name: nginx
    targetPort: 80
  - port: 9002
    name: multitool
    targetPort: 8080
